<resources>
    <string name="app_name">绿色长城</string>
    <string name="knowledge_quiz">知识问答</string>
    <string name="test">测试</string>
    <string name="string_ten">/10</string>
    <string name="string_confirm">确认</string>
    <string name="next_question">下一题</string>
    <string name="prev_question">上一题</string>
    <string name="string_score">积分</string>
    <string name="string_zero">0</string>
    <string name="login_by_phone">手机号码登录</string>
    <string name="string1">绿水青山就是金山银山</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="another_login_way">其他登录方式</string>
    <string name="string2">登录即代表同意 用户协议 和 隐私政策</string>
    <string name="string3">守护长城</string>
    <string name="string4">不知道怎样分类？10秒钟拍照识别！</string>
    <string name="string5">从你我他做起，文明一大步</string>
    <string name="string6">是什么垃圾？一搜就知道！</string>
    <string name="start_play">开始体验</string>
    <string name="string_alarm">提醒</string>
    <string name="string_setting">设置</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_track">我的足迹</string>
    <string name="my_contribution">我的贡献</string>
    <string name="put_calendar">投放日历</string>
    <string name="string_recycle">上门回收</string>
    <string name="sign_in_everyday">每日签到</string>
    <string name="rubbish_discern">垃圾识别</string>
    <string name="look_more">查看更多</string>
    <string name="string_store">兑换商城</string>
    <string name="local_policy">本地政策</string>
    <string name="rubbish_classify">垃圾分类</string>
    <string name="take_photo">拍照</string>
    <string name="from_album">从相册选取照片</string>
    <string name="string_cancel">取消</string>
    <string name="back_login">退出登录</string>
    <string name="string_China">中国</string>
    <string name="start_quiz">开始测试</string>
    <string name="string7">—垃圾分类—</string>
    <string name="string8">分类知识答题</string>
    <string name="string9">该出手时就出，该分类时就分类</string>
    <string name="change_username">修改昵称</string>
    <string name="login_by_pwd">账号密码登录</string>
    <string name="register_of_login">还没有账号？立即注册</string>
    <string name="mine_info">个人信息</string>
    <string name="back_to_login">已有账号了？返回登录</string>
    <string name="register_account">账号注册</string>
    <string name="about_us">关于我们</string>
    <string name="register">注册</string>
    <string name="string_collect">收藏</string>
</resources>