<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/my_collect"
            android:title="@string/my_collect"
            android:icon="@drawable/ic_heart"/>
    </group>

    <group
        android:id="@+id/group4">
        <item
            android:id="@+id/my_track"
            android:title="@string/my_track"
            android:icon="@drawable/ic_track"/>
    </group>

    <group
        android:id="@+id/group5">
        <item
            android:id="@+id/my_contribution"
            android:icon="@drawable/ic_cap"
            android:title="@string/my_contribution" />
    </group>
    <group
        android:id="@+id/group6">
        <item
            android:id="@+id/back_login"
            android:icon="@drawable/ic_back"
            android:title="@string/back_login" />
    </group>

</menu>