<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.LoginByCodeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyTextInputLayout"
            app:counterMaxLength="11"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:passwordToggleEnabled="false"
            app:placeholderTextColor="@color/white"
            app:prefixText="+86"
            app:prefixTextColor="@color/white"
            app:suffixText="+86"
            app:suffixTextColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_phone_num"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/codeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyTextInputLayout"
            app:counterMaxLength="4"
            app:endIconDrawable="@drawable/ic_send"
            app:endIconMode="custom"
            app:helperText="点击右侧图标获取验证码"
            app:helperTextTextColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35"
            app:passwordToggleEnabled="false"
            app:placeholderTextColor="@color/white"
            app:prefixTextColor="@color/white"
            app:startIconDrawable="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_code"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyTextInputLayout"
            app:counterMaxLength="12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true"
            app:placeholderTextColor="@color/white"
            app:prefixTextColor="@color/white"
            app:startIconDrawable="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_pwd"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwdAgainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyTextInputLayout"
            app:counterMaxLength="12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65"
            app:passwordToggleEnabled="true"
            app:placeholderTextColor="@color/white"
            app:prefixTextColor="@color/white"
            app:startIconDrawable="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_pwd_again"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0.8"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/gray"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.80"
            app:strokeColor="#7D7D7D"
            app:strokeWidth="1dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="@drawable/text_underline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.90" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>